# routers/api/v1/article.go
@@ -4,6 +4,7 @@ import (
 	"fmt"
 	"gsgo/models"
 	"gsgo/pkg/e"
+	"gsgo/service/article_service"
 	"net/http"
 
 	"github.com/Unknwon/com"
@@ -27,7 +28,8 @@ func GetArticleByID(c *gin.Context) {
 	data := make(map[string]interface{})
 	maps := make(map[string]interface{})
 	code := e.SUCCESS
-	article := models.GetArticleByID(id)
+	articleService := article_service.Article{ID: id}
+	article := articleService.GetCache()
 	if article.ID != 0 {
 		maps["ID"] = id
 		data["atricle"] = article
@@ -75,11 +77,48 @@ func AddArticle(c *gin.Context) {
 	data := make(map[string]interface{})
 	if !valid.HasErrors() {
 		code = e.SUCCESS
-		maps := make(map[string]interface{})
-		maps["title"] = article.Title
 		data["article"] = models.AddArticle(article.Title, article.Body, article.ChannelID, userId)
 	}
 
+	c.JSON(http.StatusOK, gin.H{
+		"code": code,
+		"msg":  e.GetMsg(code),
+		"data": data,
+	})
+}
+
+// AddArticle article
+// @Summary AddArticle
+// @Security ApiKeyAuth
+// @Produce  json
+// @Tags  文章
+// @Param id path int true "aticle ID"
+// @Param body body v1.createArticle true "新建"
+// @Success 200 {string} string ""
+// @Failure 500 {string} string ""
+// @Router /articles/{id} [put]
+func UpdateArticle(c *gin.Context) {
+	id := com.StrTo(c.Param("id")).MustInt()
+	userId, _ := c.MustGet("userId").(int)
+	form := make(map[string]interface{})
+	data := make(map[string]interface{})
+	var article createArticle
+	c.BindJSON(&article)
+	valid := validation.Validation{}
+	if article.Title != "" {
+		form["Title"] = article.Title
+		valid.MaxSize(article.Title, 16, "title").Message("标题不能少于2字符")
+	}
+	if article.Body != "" {
+		form["Body"] = article.Body
+		valid.MaxSize(article.Body, 1000, "body").Message("标题100字符")
+	}
+
+	code := e.INVALID_PARAMS
+	if !valid.HasErrors() {
+		code = e.SUCCESS
+		data["article"] = models.UpdateArticleById(id, userId, form)
+	}
 	c.JSON(http.StatusOK, gin.H{
 		"code": code,
 		"msg":  e.GetMsg(code),
